chore tests mockitos